--- a/src/components/ImageGalleryItem/ImageGallery.module.css
+++ b/src/components/ImageGalleryItem/ImageGallery.module.css
@@ -1,18 +1,16 @@
  
-     .img {
- width: 100%;
- height: 150px;
- object-fit: cover;
- padding-bottom: 40px;
- transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); }
-.li {
-  display: grid;
-  max-width: calc(100vw - 48px);
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-gap: 16px;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
-  list-style: none;
-  margin-left: auto;
-  margin-right: auto; }
+   .img {
+       display: grid;
+    max-width: calc(100vw - 48px);
+       grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+       grid-gap: 16px;
+       margin-top: 0;
+       margin-bottom: 0;
+       padding: 0;
+       list-style: none;
+       margin-left: auto;
+       margin-right: auto;
+   }
+  
+
+     
